# envoy-socks5-ss

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  docker-compose.yml  keys.json
.github/workflows/: build-dynamic.yml  build-full.yml  build-full.yml.disabled  build.yml
api/envoy/extensions/filters/network/socks5_ss/v3/: BUILD  socks5_ss.proto
cmake/: socks5-config.cmake.in
examples/: envoy-socks5-ss.yaml  prometheus.yml
include/shadowsocks/: shadowsocks.hpp  ss_cluster.hpp
include/socks5/: socks5.hpp
proto/: socks5_filter.proto  socks5_ss.proto
scripts/: chrome-proxy.cmd  install-windows.ps1
source/extensions/: extensions_build_config.bzl
source/extensions/filters/network/socks5/: config.cc  socks5_filter.cc
source/extensions/filters/network/socks5_ss/: BUILD  ss_config.cc  ss_filter.cc  ss_filter.h
src/: socks5_ss_proxy.cc
src/filter/: config.cc  socks5_filter.h  ss_config.cc  ss_filter.cc
test/: cluster_test.cc  socks5_test.cc  ss_test.cc  standalone_test.cc
